# lithoglyph

./: .gitignore  AI.a2ml  AI.djot  ARCHITECTURE.adoc  CHANGELOG.md  CNAME  CONTRIBUTING.adoc  Containerfile  Dockerfile  ECOSYSTEM.scm  Form and Formbase.txt  FormDB .txt  HONEST-STATUS-2026-02-13.md  META.scm  MOVED.md  PHILOSOPHY.adoc  PROPOSED-MONOREPO-STRUCTURE.md  QUICKSTART.adoc  README.adoc  RENAME-SUMMARY.md  ROADMAP.adoc  SECURITY.md  STATE.scm  UNIFIED-ROADMAP.scm  VERSIONING.adoc  about.html  contact.html  demo-server  docs.html  formbd  formbd.ipkg  formdb.scm  gallery.html  index.html  justfile  lithoglyph-0.1.0.ctp.ctp  lithoglyph.ctp  lithoglyph.scm  policies.html  robots.txt  (+2 more)
.claude/: CLAUDE.md
.github/workflows/: ci.yml  test-suite.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6scm/: ECOSYSTEM.scm  META.scm  STATE.scm
.well-known/: aibdp.json  security.txt
analytics/: MOVED.md  Project.toml  README.adoc  README.md  config.example.toml
analytics/src/: FormBDAnalytics.jl  FormDB_Analytics_Aggregations.res  FormDB_Analytics_Export.res  FormDB_Analytics_TimeSeries.res  FormDB_Analytics_Window.res  analytics.jl  api.jl  columnar_store.jl  config.jl  formbd_client.jl  main.jl
analytics/test/: runtests.jl
api/: build.zig
api/graphql/: schema.graphql
api/proto/: formbd.proto
api/spec/: openapi.yaml
api/src/: auth.zig  bridge_client.zig  config.zig  graphql.zig  grpc.zig  integration_tests.zig  main.zig  metrics.zig  rest.zig  router.zig  websocket.zig
beam/: BUILD-STATUS.md  ECOSYSTEM.scm  EXTENDED-SESSION-SUMMARY.md  FORMBD-BEAM-INTEGRATION.md  M11-HTTP-API-SPEC.md  META.scm  MOVED.md  README.adoc  SECURITY-REQUIREMENTS.scm  SESSION-SUMMARY-M10-DAY3.md  STATE.scm  gleam.toml  test_minimal.erl  test_nif.erl  test_rust.erl
beam/native/: Makefile  build.zig
beam/native_rust/: Cargo.toml  build.rs
beam/native_rust/src/: lib.rs
beam/src/: formdb_beam.gleam  formdb_nif.erl
beam/test/: formdb_integration_test.exs  formdb_nif_test.exs  test_helper.exs
clients/: README.md
clients/php/: README.md  composer.json
clients/rescript/: README.md  deno.json  rescript.json
control-plane/: README.adoc
core-factor/fdql/: benchmarks.factor  fdql.factor  seam-tests.factor
core-factor/gql/: benchmarks.factor  storage-backend.factor
core-forth/: README.adoc
core-forth/src/: formbd-journal.fs  formbd-model.fs  lithoglyph-blocks.fs  lithoglyph-journal.fs  lithoglyph-model.fs
core-forth/test/: test-blocks.fs
core-zig/: build.zig  test-db-open  test-ffi-integration  test-ffi-integration.c  test-version-only  test.fdb  test_txn.fdb
core-zig/src/: blocks.zig  bridge.zig  cbor.zig  types.zig
debugger/: .gitignore  CHANGELOG.md  UNIFIED-ROADMAP.scm
debugger/.machine_readable/: META.scm  NEUROSYM.scm  STATE.scm
debugger/adapters/: Cargo.toml
debugger/core/: FormBDDebugger.lean  lake-manifest.json  lakefile.lean
debugger/scripts/: init-demo.sql
debugger/ui/: Cargo.toml
debugger/ui/src/: app.rs  main.rs  widgets.rs
debugger/ui/src/widgets/: constraint_tree.rs  timeline.rs
distributed/: README.md
docs/: API-REFERENCE.adoc  DEPLOYMENT.adoc  INTEGRATION-PATTERNS.adoc  MIGRATION-FROM-RDBMS.adoc  OBSERVABILITY.adoc  SECURITY-AUTH.adoc
ffi/zig/: build.zig
geo/: Cargo.toml  ECOSYSTEM.scm  META.scm  MOVED.md  README.adoc  STATE.scm  config.example.toml
integrations/: README.md
perf/: README.md
spec/: README.adoc  blocks.adoc  cloud-storage.adoc  encoding.adoc  fbql.adoc  fql-philosophy.adoc  fql.adoc  gql-dependent-types.md  journal.adoc  self-normalizing.adoc
stability/: README.md
stories/: README.adoc
studio/: MOVED.md  README.adoc  UNIFIED-ROADMAP.scm  deno.json  justfile  package.json
studio/debugger/adapters/: Cargo.toml
studio/debugger/adapters/cli/: Cargo.toml
studio/debugger/adapters/formbd/: Cargo.toml
studio/debugger/adapters/formbd/src/: journal.rs  lib.rs  provenance.rs  snapshot.rs
studio/debugger/adapters/postgres/: Cargo.toml
studio/debugger/adapters/postgres/src/: constraint_check.rs  schema.rs  transaction.rs  wal.rs
studio/debugger/adapters/sqlite/: Cargo.toml
studio/debugger/adapters/sqlite/src/: lib.rs
test-vectors/: README.adoc
tests/: README.md
tools/: README.adoc
(+175 files in other folders)
