# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "lithoglyph-debugger-ui"
description = "Terminal UI for FormBD Debugger"
version = "1.0.0"
edition = "2021"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/lithoglyph-debugger"

[[bin]]
name = "lithoglyph-debug"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

lithoglyph-debugger-postgres = { path = "../adapters/postgres" }
lithoglyph-debugger-lithoglyph = { path = "../adapters/lithoglyph" }
lithoglyph-debugger-sqlite = { path = "../adapters/sqlite" }
