# SPDX-License-Identifier: PMPL-1.0-or-later

[workspace]
resolver = "2"
members = [
    "postgres",
    "lithoglyph",
    "sqlite",
    "cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/lithoglyph-debugger"
keywords = ["database", "debugging", "verification", "lithoglyph"]
categories = ["database", "development-tools::debugging"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
