# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "lithoglyph-debugger-lithoglyph"
description = "Native FormBD adapter for FormBD Debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3 = "1.5"
